NDS-426 (docs): update README and docs
- Update README with further developer guidance
- update docs for accordion with updated id changes

--- a/docs/pages/components/accordion.mdx
+++ b/docs/pages/components/accordion.mdx
@@ -78,7 +78,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 ```html HTML
 <div class="accordion ">
 	<div class="accordion__heading">
-		<button id="accordion-title-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R10nkm:" data-tracking="Show"
+		<button id="accordion-button-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R10nkm:" data-tracking="Show"
 			class="accordion__summary" type="button">
 			<span class="accordion__toggleLabel toggle__label">
 				<svg width="1em" height="1em" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg" class="toggle__icon" aria-hidden="true" focusable="false">
@@ -91,7 +91,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 			<span class="accordion__title">Accordion title</span>
 		</button>
     </div>
-	<div id="accordion-content-:R10nkm:" aria-labelledby="accordion-title-:R10nkm:" class="accordion__content" hidden="">
+	<div id="accordion-content-:R10nkm:" aria-labelledby="accordion-button-:R10nkm:" class="accordion__content" hidden="">
         <p>
 			Our monthly newsletter, keeping you up to
 			date with<a href="#">important developments at NICE</a>
@@ -118,7 +118,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 ```html HTML
 <div class="accordion ">
 	<div class="accordion__heading">
-		<button id="accordion-title-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R1997km:" data-tracking="Show"
+		<button id="accordion-button-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R1997km:" data-tracking="Show"
 			class="accordion__summary" type="button">
 			<span class="accordion__toggleLabel toggle__label">
 				<svg width="1em"
@@ -141,7 +141,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 			</span>
 		</button>
 	</div>
-    <div id="accordion-content-:R1997km:" aria-labelledby="accordion-title-:R10nkm:" class="accordion__content" hidden="">
+    <div id="accordion-content-:R1997km:" aria-labelledby="accordion-button-:R10nkm:" class="accordion__content" hidden="">
 		<p>Cautionary content</p>
 	</div>
 </div>
@@ -165,7 +165,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 ```html HTML
 <div class="accordion">
 	<h2 class="accordion__heading">
-		<button id="accordion-title-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R1a97km:" data-tracking="Show"
+		<button id="accordion-button-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:R1a97km:" data-tracking="Show"
 			class="accordion__summary" type="button">
 			<span class="accordion__toggleLabel toggle__label">
 				<svg width="1em" height="1em" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +179,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 			<span class="accordion__title">Accordion with heading title</span>
 		</button>
 	</h2>
-	<div id="accordion-content-:R1a97km:" aria-labelledby="accordion-title-:R10nkm:" class="accordion__content" hidden="">
+	<div id="accordion-content-:R1a97km:" aria-labelledby="accordion-button-:R10nkm:" class="accordion__content" hidden="">
 		<p>Inner content of accordion</p>
 	</div>
 </div>
@@ -224,7 +224,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 	</button>
 	<div class="accordion ">
 		<div class="accordion__heading">
-		<button id="accordion-title-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:Rdb97km:" data-tracking="Show" class="accordion__summary" type="button">
+		<button id="accordion-button-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:Rdb97km:" data-tracking="Show" class="accordion__summary" type="button">
 			<span class="accordion__toggleLabel toggle__label">
 				<svg width="1em" height="1em" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg"
 					class="toggle__icon" aria-hidden="true" focusable="false">
@@ -236,13 +236,13 @@ You can choose from the default single accordion, a caution accordion or grouped
 			</span>
 			<span class="accordion__title">Accordion 1</span>
 		</button>
-		<div id="accordion-content-:Rdb97km:" aria-labelledby="accordion-title-:R10nkm:" class="accordion__content" hidden="">
+		<div id="accordion-content-:Rdb97km:" aria-labelledby="accordion-button-:R10nkm:" class="accordion__content" hidden="">
 			<p>Accordion 1 body</p>
 		</div>
 	</div>
 	<div class="accordion ">
 		<div class="accordion__heading">
-			<button id="accordion-title-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:Rlb97km:" data-tracking="Show" class="accordion__summary" type="button">
+			<button id="accordion-button-:R10nkm:" aria-expanded="false" aria-controls="accordion-content-:Rlb97km:" data-tracking="Show" class="accordion__summary" type="button">
 				<span class="accordion__toggleLabel toggle__label">
 					<svg width="1em" height="1em" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg" class="toggle__icon" aria-hidden="true" focusable="false">
 						<path d="M478.152 174c0 10.091-3.525 18.661-10.576 25.712l-186 186c-7.243 7.243-15.909 10.864-26 10.864-10.283 0-18.853-3.621-25.712-10.864l-186-186C36.621 192.853 33 184.283 33 174c0-10.091 3.621-18.757 10.864-26L65 126.576C72.424 119.525 81.09 116 91 116c10.091 0 18.661 3.525 25.712 10.576L255.576 265.44 394.44 126.576c7.051-7.051 15.621-10.576 25.712-10.576 9.909 0 18.576 3.525 26 10.576L467.576 148c7.051 7.424 10.576 16.091 10.576 26Z" fill="currentColor"></path>
@@ -252,7 +252,7 @@ You can choose from the default single accordion, a caution accordion or grouped
 				<span class="accordion__title">Accordion 2</span>
 			</button>
 		</div>
-		<div id="accordion-content-:Rlb97km:" aria-labelledby="accordion-title-:R10nkm:" class="accordion__content" hidden="">
+		<div id="accordion-content-:Rlb97km:" aria-labelledby="accordion-button-:R10nkm:" class="accordion__content" hidden="">
 			<p>Accordion 2 body</p>
 		</div>
 	</div>
