NDS-426 (fix): fix typo in accordion.mdx

--- a/docs/pages/components/accordion.mdx
+++ b/docs/pages/components/accordion.mdx
@@ -273,7 +273,7 @@ UI contrast - Visual information required to identify components and states (exc
 **Accessible use of colour:** Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
 
 ### ARIA attributes and button use:
-The toggle button uses the `aria-expanded` attribute to indicate whether the content is visisble (`true`) or not (`false`).
+The toggle button uses the `aria-expanded` attribute to indicate whether the content is visible (`true`) or not (`false`).
 The `aria-controls` attribute is used to associate the button with the content it controls.
 
 Use of a `button` element ensures that the accordion can be triggered by keyboard users and screen reader users.
