NDS-441 Add description to hero.
Co-authored-by: Dale Hudson <dalecreativ@users.noreply.github.com>

--- a/docs/pages/components/hero.mdx
+++ b/docs/pages/components/hero.mdx
@@ -34,7 +34,7 @@ The hero component is flexible, combining images, colours, text and calls to act
 
 ### Default
 
-The hero will always contain a title, description, and image.
+The hero will always contain a title, intro, and image.  There is also an optional description and call to action.
 
 <Screenshot image="hero-2.png" alt="Screenshot of the default hero component" />
 
@@ -74,7 +74,7 @@ Images are removed on mobile and tablet views.
 
 Background colour: #EEEAE4, text colour: #0e0e0e
 
-<Screenshot image="hero-6.png" alt="Screenshot of the hero component using the subtle colour variation" />
+<Screenshot image="hero-3.png" alt="Screenshot of the hero component using the subtle colour variation" />
 
 #### Bold
 
