NDS-467 update card docs page so example outputs match example react components

--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -120,7 +120,7 @@ A callout card adds a white container to the card grid component. Use this for c
 
 <CH.Code>
 ```js React
-<Card headingText="Card title 1" summary="Card text 1" callout />
+<Card headingText="Card title 1" summary=Nulla risus erat, maximus id semper ut, vulputate non nisl. Pellentesque sed luctus enim." callout />
 ```
 ```html HTML
 <article class="card card--callout">
@@ -128,7 +128,7 @@ A callout card adds a white container to the card grid component. Use this for c
 		<p class="card__heading">Card title 1</p>
 	</header>
 	<p class="card__summary">
-		Card text 1
+		Nulla risus erat, maximus id semper ut, vulputate non nisl. Pellentesque sed luctus enim.
 	</p>
 </article>
 ```
@@ -151,7 +151,7 @@ We avoid wrapping an entire card in an anchor tag as this can be a difficult exp
 
 <CH.Code>
 ```js React
-<Card headingText="Card title 1" link={{ destination: "/test" }} summary="Card text 1" />
+<Card headingText="Card title 1" link={{ destination: "/test" }} summary="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nisi enim. In nec lorem ac est cursus sollicitudin molestie vel nunc." />
 ```
 ```html HTML
 <article class="card">
@@ -161,7 +161,7 @@ We avoid wrapping an entire card in an anchor tag as this can be a difficult exp
 		</p>
 	</header>
 	<p class="card__summary">
-		Card text 1
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sed nisi enim. In nec lorem ac est cursus sollicitudin molestie vel nunc.
 	</p>
 </article>
 ```
