NDS-467 Fix syntax error in docs for card

--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -120,7 +120,7 @@ A callout card adds a white container to the card grid component. Use this for c
 
 <CH.Code>
 ```js React
-<Card headingText="Card title 1" summary=Nulla risus erat, maximus id semper ut, vulputate non nisl. Pellentesque sed luctus enim." callout />
+<Card headingText="Card title 1" summary="Nulla risus erat, maximus id semper ut, vulputate non nisl. Pellentesque sed luctus enim." callout />
 ```
 ```html HTML
 <article class="card card--callout">
