NDS-486 add aria-atomic attribute to non-intrusive alerts to mirror 'alert' behaviour more closely

--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -33,7 +33,7 @@ There are four variations of the alert component, all of which can be set to 'no
 </Alert>
 ```
 ```html HTML
-<div class="alert alert--info" data-component="alert--info" aria-live="polite">
+<div class="alert alert--info" data-component="alert--info" aria-live="polite" aria-atomic="true">
 	<h3>Info alert</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
