NDS-486 docs tweak

--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -17,7 +17,7 @@ Page alerts are used to notify users of important information or changes on a pa
 
 By default, alerts have an aria role of 'alert' to enable assistive technology to notify the user of the content as it is displayed. This can be overwritten with an aria-live value of 'polite' for alerts which are less time-critical or do not require the user's immediate attention.
 
-There are four variations of the alert component, all of which can be set to 'nonIntrusive' if required:
+There are four variations of the alert component, all of which can be set to 'nonIntrusive' if appropriate:
 
 ### Info
 
