NDS-486 add further clarification around non-intrusive alerts

--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -115,6 +115,7 @@ Use an alert to give the user something they need to know in the context of the 
 -   Success alerts are essential for notifying the user that a task is complete.
 -   Use error alerts with form validation or other errors that block the user from completing their task.
 -   Use caution page alerts to tell the user something to be aware of; only use a caution alert if the information will help the user avoid a problem.
+-	Use the 'non-intrusive' option for alerts which don't require the user's immediate attention, and instead can be presented at the next opportunity without interrupting.
 
 ## When not to use alerts
 
