NDS-485 Remove .text-truncate from design system

--- a/docs/pages/foundations/helpers.mdx
+++ b/docs/pages/foundations/helpers.mdx
@@ -66,7 +66,7 @@ Change the text alignment of an element by adding `.text-left`, `.text-right`, `
 
 ## Text wrapping
 
-Use `.text-nowrap` to keep text on one line and stop it from wrapping, and use `.text-truncate` to add an an ellipsis to text that overflows its container.
+Use `.text-nowrap` to keep text on one line and stop it from wrapping.
 
 <Example>
 <h3>Example: text wrapping</h3>
@@ -75,7 +75,6 @@ Use `.text-nowrap` to keep text on one line and stop it from wrapping, and use `
 ```html
 <div style="background: #eee; width: 80px">
   <p class="text-nowrap">This is some text that doesn't wrap</p>
-  <p class="text-truncate">This is some truncated text</p>
 </div>
 ```
 </Example>
